translated JavaScript to Go and implemented the basic game dynamics.  happy path only.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta charset="utf-8" />
 	<title>Pongo</title>
-	<!--script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script-->
 </head>
 <body>
-<svg width="16cm" height="10cm">
-	<line x1="0cm" y1="0cm" x2="16cm" y2="0cm" stroke="black" stroke-width="3" />
+<svg width="10cm" height="16cm">
+	<line x1="0cm" y1="0cm" x2="0cm" y2="16cm" stroke="black" stroke-width="3" />
 	
-	<circle id="ball" cx="8cm" cy="5cm" r=".3cm" fill="blue" />
-	<line id="left" x1="0cm" y1="4cm" x2="0cm" y2="6cm" stroke="red" stroke-width="1cm" />
-	<line id="right" x1="16cm" y1="4cm" x2="16cm" y2="6cm" stroke="green" stroke-width="1cm" />
+	<circle id="ball" cx="5cm" cy="8cm" r=".3cm" fill="blue" />
+	<line id="player1" x1="4cm" y1="0cm" x2="6cm" y2="0cm" stroke="red" stroke-width="1cm" />
+	<line id="player2" x1="4cm" y1="16cm" x2="6cm" y2="16cm" stroke="green" stroke-width="1cm" />
 
-	<line x1="0cm" y1="10cm" x2="16cm" y2="10cm" stroke="black" stroke-width="3" />
+	<line x1="10cm" y1="0cm" x2="10cm" y2="16cm" stroke="black" stroke-width="3" />
 </svg> 
 <script src="client.js"></script>
 </body>
