--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
 	<line x1="10cm" y1="0cm" x2="10cm" y2="12cm" stroke="black" stroke-width="3" />
 </svg> 
-<script src="client.js"></script>
+<script src="pongo.js"></script>
 </body>
 </html>
