--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 <body>
 <svg width="10cm" height="12cm">
 	<line x1="0cm" y1="0cm" x2="0cm" y2="12cm" stroke="black" stroke-width="3" />
-	
+
 	<circle id="ball" cx="5cm" cy="6cm" r=".3cm" fill="blue" />
-	<line id="player1" x1="4cm" y1="0cm" x2="6cm" y2="0cm" stroke="red" stroke-width="1cm" />
-	<line id="player2" x1="4cm" y1="12cm" x2="6cm" y2="12cm" stroke="green" stroke-width="1cm" />
+
+	<line id="player1" x1="4cm" y1="0cm" x2="6cm" y2="0cm" stroke="red" stroke-width="1.5cm" />
+	<circle id="player1left" cx="4cm" cy="0cm" r=".75cm" fill="red" />
+	<circle id="player1right" cx="6cm" cy="0cm" r=".75cm" fill="red" />
+
+	<line id="player2" x1="4cm" y1="12cm" x2="6cm" y2="12cm" stroke="green" stroke-width="1.5cm" />
+	<circle id="player2left" cx="4cm" cy="12cm" r=".75cm" fill="green" />
+	<circle id="player2right" cx="6cm" cy="12cm" r=".75cm" fill="green" />
 
 	<line x1="10cm" y1="0cm" x2="10cm" y2="12cm" stroke="black" stroke-width="3" />
 </svg> 
